<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/indicador2"
        android:title="@string/ordenar_por_tiempo"

        app:showAsAction="never"

        />


    <item android:id="@+id/indicador3"
        android:title="@string/ordenar_por_score"

        app:showAsAction="never"

        />


    <item android:id="@+id/indicador4"
        android:title="@string/ordenar_por_fecha"

        app:showAsAction="never"

        />


    <item android:id="@+id/indicador5"
        android:title="@string/borrar_registros_r"

        app:showAsAction="never"

        />



    <item android:id="@+id/indicador6"
        android:title="@string/actualizar_a_minutos_r"

        app:showAsAction="never"

        />




</menu>